go-reminders/overlays/prod/deployment.yaml
#
# Copyright 2015-2019 VMware, Inc. All Rights Reserved.
# Author: Tom Hite (thite@vmware.com)
#
# SPDX-License-Identifier: https://spdx.org/licenses/MIT.html
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-reminders
spec:
  template:
    metadata:
      labels:
        app: go-reminders
    spec:
      containers:
        - name: go-reminders
          image: docker-registry-repo
