go-reminders/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-reminders
spec:
  type: LoadBalancer
