go-reminders/overlays/prod/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: go-reminders
  name: go-reminders
  namespace: default
spec:
  rules:
  - host: go-reminders.ing.vballin.com
    http:
      paths:
      - backend:
          serviceName: go-reminders
          servicePort: 8080
